Bug 80247 - Khronos conformance test ES3-CTS.gtf.GL3Tests.transform_feedback.transform_feedback_vertex_id fails
Summary: Khronos conformance test ES3-CTS.gtf.GL3Tests.transform_feedback.transform_f...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Ian Romanick
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-19 18:41 UTC by Anuj Phogat
Modified: 2014-09-16 09:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anuj Phogat 2014-06-19 18:41:59 UTC
Test fails with following error:
ERROR:transform_feedback_vertex_id:compareArrays(GLint):index 0 value 4 != 0

Found on further investigation that intel hardware always sets the VertexID starting from 0, irrespective of the first index specified in glDrawArrays(mode, first, count). Seems like this issue is present on multiple Intel platforms (gen6,7,8). We need a software workaround to provide vertex shader with correct gl_VertexID values.
Comment 1 Ian Romanick 2014-06-19 18:59:12 UTC
I'm working on this now.  I'll also make a piglit test.
Comment 2 Tapani Pälli 2014-09-16 09:00:31 UTC
This was fixed, just verified this with IVB and Mesa master (e1c50ab)

--- 8< ------------------
commit 927f5db46135b3eb63f401833b1e40a3be9ca4e0
Author: Ian Romanick <ian.d.romanick@intel.com>
Date:   Fri Jun 20 16:26:35 2014 -0700

    i965: Request lowering gl_VertexID
    
    Fixes the (new) piglit tests gles-3.0-drawarrays-vertexid,
    gl-3.0-multidrawarrays-vertexid, and gl-3.2-basevertex-vertexid.
    
    Fixes gles3conform failure in:
    
    ES3-CTS.gtf.GL3Tests.transform_feedback.transform_feedback_vertex_id
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=80247
    Signed-off-by: Ian Romanick <ian.d.romanick@intel.com>
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.